# ejdb.rs

./: Cargo.toml
ejdb-sys/: Cargo.toml  build.rs
ejdb-sys/ejdb2-release/include/ejdb2/: ejdb2.h  jbl.h  jql.h  lwre.h
ejdb-sys/ejdb2-release/include/ejdb2/iowow/: iwfile.h
ejdb-sys/ejdb2-release/lib/: libejdb2.so.2  libejdb2.so.2.61
ejdb-sys/ejdb2-release/lib/pkgconfig/: libejdb2.pc
ejdb-sys/src/: lib.rs
src/: ejdb_bson.rs  types.rs
src/database/: indices.rs  meta.rs  mod.rs
src/utils/: bson.rs
