[package]
name = "ejdb"
version = "0.4.1"
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]
description = "Bindings for EJDB, and embedded JSON database"
repository = "https://github.com/netvl/ejdb.rs"
documentation = "https://netvl.github.io/ejdb.rs/"
readme = "Readme.md"
keywords = ["ejdb", "database", "json", "bson", "ffi"]
license = "MIT"

[badges]
maintenance = { status = "looking-for-maintainer" }

[lib]
name = "ejdb"

[dependencies]
ejdb-sys = { path = "ejdb-sys", version = "0.4" }
bson = "0.14.1"
bitflags = "1.3.2"
quick-error = "1.2"
libc = "0.2.101"
itertools = "0.10.1"

[dev-dependencies]
tempdir = "0.3.7"
